function单元测试，以及函数优化